--- a/src/components/UI/navigation/MobileNavigation.scss
+++ b/src/components/UI/navigation/MobileNavigation.scss
@@ -2,7 +2,7 @@
 
 $phi-inverse-fifth: 0.090170; // 1/φ⁵
 $phi-inverse-sixth: 0.05572809000084249; // 1/φ⁴
-$background: #FFFCF6;
+$background: #F8F4E8;
 $primary: #222222;
 $border: #22222256;
 $c: 0.25rem;
