--- a/src/components/world/world.scss
+++ b/src/components/world/world.scss
@@ -1,1 +1,12 @@
-// World styling
+.world-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.world-content {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
