--- a/src/components/UI/navigation/MobileNavigation.scss
+++ b/src/components/UI/navigation/MobileNavigation.scss
@@ -2,7 +2,7 @@
 
 $phi-inverse-fifth: 0.090170; // 1/φ⁵
 $phi-inverse-sixth: 0.05572809000084249; // 1/φ⁴
-$background: #F8F4E8;
+$background: #FDFCF9;
 $primary: #222222;
 $border: #22222256;
 $c: 0.25rem;
@@ -32,7 +32,7 @@ $c: 0.25rem;
     left: 2rem;
     height: 3.5rem;
     width: 3.5rem;
-    background-color: #F8F4E8;
+    background-color: #FDFCF9;
     border: none;
     border: 1px solid $border;
     border-radius: 5px;
