--- a/src/components/UI/navigation/Navigation.scss
+++ b/src/components/UI/navigation/Navigation.scss
@@ -4,9 +4,8 @@
   top: 0;
   left: 0;
   width: 100% !important;
-  height: 100% !important;
+  height: 6.75rem !important;
   object-fit: contain;
-  display: block;
   margin: 0 auto;
   //background-color: blue;
 }
