--- a/src/components/canvas/CameraViewport.scss
+++ b/src/components/canvas/CameraViewport.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   cursor: grab;
   user-select: none;
-  background: #f0f0f0;
+  background: white;
 
   &:active {
     cursor: grabbing;
