--- a/src/island/home/section1.scss
+++ b/src/island/home/section1.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     right: 0;
     font-size: 3rem;
-    background-color: red;
+    //background-color: red;
     width: 50rem;
     height: 50rem;
 }
