--- a/src/island/home/home.scss
+++ b/src/island/home/home.scss
@@ -5,7 +5,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 6; // Behind R3F canvas (z:1)
+    pointer-events: auto; // Re-enable pointer events for island content
 }
 
 .home-content{
@@ -13,4 +14,5 @@
     font-size: 3rem;
     text-align: center;
     padding-top: 20vh;
+    background-color: red;
 }
