--- a/src/island/home/section1.scss
+++ b/src/island/home/section1.scss
@@ -1,11 +1,12 @@
 
 .section1-content{
-    color: yellow;
     position: absolute;
+    color: white;
     bottom: 0;
     right: 0;
     font-size: 3rem;
     //background-color: red;
     width: 50rem;
     height: 50rem;
+    background-color: blue;
 }
