--- a/src/components/UI/navigation/DesktopNavigation.scss
+++ b/src/components/UI/navigation/DesktopNavigation.scss
@@ -13,7 +13,7 @@ $phi-inverse-cubed: 0.236068; // 1/φ³
 $phi-inverse-fourth: 0.145898; // 1/φ⁴
 $phi-inverse-fifth: 0.090170; // 1/φ⁵
 
-$background: #FDFCF9;
+$background: white;
 $primary: #222222;
 $border: #c6c6c6;
 
@@ -66,7 +66,7 @@ $c: 0.25rem;
     width: 7rem;
     height: 8.5rem;
     border-radius: 5px;
-    border: solid 1px $border;
+    //border: solid 1px $border;
     background-color: $background;
     box-shadow: #22222233 0px 2px 6px;
   }
@@ -93,7 +93,7 @@ $c: 0.25rem;
     height: 12.5rem;
     width: 40rem;
     background-color: $background;
-    border: solid 1px $border;
+    //border: solid 1px $border;
     border-radius: 5px;
     box-shadow: #22222233 0px 2px 6px;
     display: flex;
@@ -179,7 +179,7 @@ $c: 0.25rem;
   .about-header {
     position: relative;
     font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
     width: 9rem;
     top: 0.9rem;
@@ -193,7 +193,7 @@ $c: 0.25rem;
     font-size: 0.7rem;
     font-weight: 400;
     width: 9rem;
-    top: 2rem;
+    top: 1.6rem;
     left: 1rem;
     color: $primary;
     line-height: 1.3;
@@ -202,7 +202,7 @@ $c: 0.25rem;
   .projects-box {
     width: 12.5rem;
     height: 10rem;
-    border: 1px solid $border;
+    //border: 1px solid $border;
     border-radius: 5px;
     background-color: #F0E0C8;
     overflow-y: auto;
@@ -251,7 +251,7 @@ $c: 0.25rem;
   .project-header {
     position: relative;
     font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
     width: 9rem;
     top: 0.9rem;
@@ -265,7 +265,7 @@ $c: 0.25rem;
     font-size: 0.7rem;
     font-weight: 400;
     width: 9rem;
-    top: 2rem;
+    top: 1.65rem;
     left: 1rem;
     color: $primary;
     line-height: 1.3;
@@ -273,7 +273,7 @@ $c: 0.25rem;
 
   .project-links {
     position: relative;
-    top: 1.5rem;
+    top: 1.35rem;
     left: 1rem;
     width: 10.25rem;
     list-style: none;
@@ -327,7 +327,7 @@ $c: 0.25rem;
   .personal-box {
     width: 10rem;
     height: 4rem;
-    border: 1px solid $border;
+    //border: 1px solid $border;
     border-radius: 5px;
     background-color: #C7776F;
     overflow-y: auto;
@@ -385,9 +385,9 @@ $c: 0.25rem;
     transform: translateX(-50%);
     height: 3.5rem;
     width: 3.5rem;
-    background-color: #FDFCF9;
+    background-color: $background;
     border: none;
-    border: 1px solid $border;
+    //border: 1px solid $border;
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
