everything working except for /about

--- a/src/island/home/home.scss
+++ b/src/island/home/home.scss
@@ -5,7 +5,7 @@
     // position, top, left now handled by Island component inline styles
     z-index: 6; // Behind R3F canvas (z:1)
     pointer-events: auto; // Re-enable pointer events for island content
-    background-color: red;
+    //background-color: red;
 }
 
 .home-content{
