added custom shader for image planes

--- a/src/island/home/home.scss
+++ b/src/island/home/home.scss
@@ -1,16 +1,9 @@
 .home{
     //background-color: blue;
-    width: 100rem;
-    height: 100rem;
+    top: 0;
+    left: 0;
     // position, top, left now handled by Island component inline styles
     z-index: 6; // Behind R3F canvas (z:1)
     pointer-events: auto; // Re-enable pointer events for island content
     //background-color: red;
-}
-
-.home-content{
-    color: white;
-    font-size: 3rem;
-    text-align: center;
-    padding-top: 20vh;
 }
