--- a/src/island/home/section1.scss
+++ b/src/island/home/section1.scss
@@ -2,11 +2,34 @@
 .section1-content{
     position: absolute;
     color: white;
-    bottom: 0;
-    right: 0;
+    top: -20rem;
+    left: 30rem;
     font-size: 3rem;
     //background-color: red;
     width: 50rem;
-    height: 50rem;
+    height: 30rem;
     //background-color: blue;
+
+    h2{
+        margin: 0;
+        padding: 0;
+        line-height: 1.6;
+        color: #222222;
+        font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+        font-size: 2rem;
+        font-weight: 400;
+    }
+}
+
+.word-carousel{
+    position: absolute;
+    top: 6rem;
+    margin-top: 2rem;
+    height: 6rem;
+    width: 100%;
+    overflow: hidden;
+    font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+    //background-color: red;
+    font-size: 4.5rem;
+    color: #222222;
 }
