added several performance optimizations

--- a/src/island/home/section1.scss
+++ b/src/island/home/section1.scss
@@ -3,7 +3,7 @@
     position: absolute;
     color: white;
     top: -20rem;
-    left: 30rem;
+    left: 35rem;
     font-size: 3rem;
     //background-color: red;
     width: 50rem;
@@ -13,7 +13,7 @@
     h2{
         margin: 0;
         padding: 0;
-        line-height: 1.6;
+        line-height: 2;
         color: #222222;
         font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
         font-size: 2rem;
@@ -30,6 +30,7 @@
     overflow: hidden;
     font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
     //background-color: red;
-    font-size: 4.5rem;
+    font-weight: 500;
+    font-size: 5rem;
     color: #222222;
 }
