--- a/src/pages/lightweight/Home.scss
+++ b/src/pages/lightweight/Home.scss
@@ -16,17 +16,32 @@
     left:0;
     height:100vh;
     width:100vw;
+    //background-color: red;
   }
 
   .home-header {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 50%);
-    width: calc(100% - 26rem);
+    width: calc(100% - 20rem);
     height: 50%;
-    padding-left: 10rem;
-    padding-right: 10rem;
+    padding-left: 1.618034 * 2rem;
+    padding-right: 1.618034 * 2rem;
     text-align: left;
+    z-index: 2;
+    //background-color: yellow;
+
+    // Tablet and below (< 1024px)
+    @media screen and (max-width: 1023px) {
+      width: calc(100% - 8rem);
+    }
+
+    // Mobile only (< 768px)
+    @media screen and (max-width: 767px) {
+      width: calc(100% - 2rem);
+      padding-left: 1.618034 * 1rem;
+      padding-right: 1.618034 * 1rem;
+    }
 
     h1 {
       font-size: 4.5rem;
@@ -34,6 +49,16 @@
       font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
       font-weight: 500;
       letter-spacing: -0.02em;
+
+      // Tablet and below (< 1024px)
+      @media screen and (max-width: 1023px) {
+        font-size: 3.5rem;
+      }
+
+      // Mobile only (< 768px)
+      @media screen and (max-width: 767px) {
+        font-size: 2.5rem;
+      }
     }
 
     .tagline {
@@ -42,6 +67,37 @@
       opacity: 1;
       font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
       font-weight: 400;
+
+      // Tablet and below (< 1024px)
+      @media screen and (max-width: 1023px) {
+        font-size: 1.5rem;
+      }
+
+      // Mobile only (< 768px)
+      @media screen and (max-width: 767px) {
+        font-size: 1.2rem;
+      }
+    }
+  }
+
+  // Combined 3D scene container - spans full hero section
+  .home-scene-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    pointer-events: none;
+
+    canvas {
+      width: 100% !important;
+      height: 100% !important;
+    }
+
+    // Mobile only (< 768px)
+    @media (max-width: 767px) {
+      //opacity: 0.5;
     }
   }
 
@@ -54,15 +110,25 @@
 
     .home-projects {
       position: absolute;
-      height: 100vh;
-      width: 100%;
+      left: 50%;
       top: 0;
-      left: 0;
-      background-color: red;
+      transform: translate(-50%, 0);
+      width: calc(100% - 26rem);
+      height: 100vh;
+      padding-left: 1.618034 * 2rem;
+      padding-right: 1.618034 * 2rem;
+      text-align: left;
+      z-index: 2;
+      //background-color: red;
 
-      h2 {
+      h2{
+        position: relative;
+        top: 2rem;
         font-size: 2.5rem;
-        margin-bottom: 1rem;
+        margin: 0;
+        font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+        font-weight: 500;
+        letter-spacing: -0.02em;
       }
 
       p {
@@ -71,6 +137,29 @@
         opacity: 0.95;
         max-width: 700px;
         margin: 0 auto;
+      }
+    }
+
+    .home-philosophy {
+      position: absolute;
+      left: 50%;
+      top: 100vh;
+      transform: translate(-50%, 0);
+      width: calc(100% - 26rem);
+      height: 100vh;
+      padding-left: 1.618034 * 2rem;
+      padding-right: 1.618034 * 2rem;
+      text-align: left;
+      z-index: 2;
+      //background-color: red;
+      h2{
+        position: relative;
+        top: 2rem;
+        font-size: 2.5rem;
+        margin: 0;
+        font-family: "national-park", "Helvetica Neue", Arial, sans-serif;
+        font-weight: 500;
+        letter-spacing: -0.02em;
       }
     }
   }
