--- a/src/components/UI/toolbar/Toolbar.scss
+++ b/src/components/UI/toolbar/Toolbar.scss
@@ -19,7 +19,7 @@ $border: #c6c6c6;
   bottom: $phi-squared * 1rem;
   left: 50%;
   transform: translateX(-50%);
-  background-color: red;
+  background-color: rgb(193, 41, 201);
   height: 2.4rem;
   width: 10rem;
   z-index: 1000;
@@ -56,7 +56,7 @@ $border: #c6c6c6;
     background: none;
     border: none;
     cursor: pointer;
-    padding: 0;
+    padding: 0.25rem;
     border-radius: 0.15rem;
     transition: background-color 0.2s ease;
     display: flex;
@@ -68,6 +68,11 @@ $border: #c6c6c6;
 
     svg {
       display: block;
+      max-width: 1.2rem;
+      max-height: 1.2rem;
+      width: auto;
+      height: auto;
+      object-fit: contain;
     }
 
     &:hover {
